--- a/test/results/20211221_214228.DAG.html
+++ b/test/results/20211221_214228.DAG.html
@@ -113,28 +113,40 @@ nodes: [
 { data: { id: 'p5', label: 'fst_calculation'}, classes: 'PROCESS' },
 { data: { id: 'p6', label: 'fst_calculation_2'}, classes: 'PROCESS' },
 { data: { id: 'p7', label: 'fst_calculation_3'}, classes: 'PROCESS' },
-{ data: { id: 'p8', label: 'mix'}, classes: 'OPERATOR' },
-{ data: { id: 'p9', label: 'toList'}, classes: 'OPERATOR' },
-{ data: { id: 'p10', label: 'pbs_by_snp'}, classes: 'PROCESS' },
-{ data: { id: 'p11'}, classes: 'NODE' },
+{ data: { id: 'p8', label: 'af_1'}, classes: 'PROCESS' },
+{ data: { id: 'p9', label: 'af_2'}, classes: 'PROCESS' },
+{ data: { id: 'p10', label: 'af_3'}, classes: 'PROCESS' },
+{ data: { id: 'p11', label: 'mix'}, classes: 'OPERATOR' },
+{ data: { id: 'p12', label: 'toList'}, classes: 'OPERATOR' },
+{ data: { id: 'p13', label: 'pbs_by_snp'}, classes: 'PROCESS' },
+{ data: { id: 'p14'}, classes: 'NODE' },
 ],
 edges: [
 { data: { source: 'p0', target: 'p5', label: 'pop_1' } },
 { data: { source: 'p1', target: 'p5', label: 'pop_2' } },
 { data: { source: 'p2', target: 'p6', label: 'pop_out' } },
 { data: { source: 'p3', target: 'p5', label: 'vcf' } },
-{ data: { source: 'p4', target: 'p10', label: 'rfile' } },
-{ data: { source: 'p5', target: 'p8'} },
+{ data: { source: 'p4', target: 'p13', label: 'rfile' } },
+{ data: { source: 'p5', target: 'p11'} },
 { data: { source: 'p3', target: 'p6', label: 'vcf' } },
 { data: { source: 'p0', target: 'p6', label: 'pop_1' } },
-{ data: { source: 'p6', target: 'p8'} },
+{ data: { source: 'p6', target: 'p11'} },
 { data: { source: 'p3', target: 'p7', label: 'vcf' } },
 { data: { source: 'p1', target: 'p7', label: 'pop_2' } },
 { data: { source: 'p2', target: 'p7', label: 'pop_out' } },
-{ data: { source: 'p7', target: 'p8'} },
-{ data: { source: 'p8', target: 'p9'} },
-{ data: { source: 'p9', target: 'p10', label: 'p4' } },
+{ data: { source: 'p7', target: 'p11'} },
+{ data: { source: 'p3', target: 'p8', label: 'vcf' } },
+{ data: { source: 'p0', target: 'p8', label: 'pop_1' } },
+{ data: { source: 'p8', target: 'p11'} },
+{ data: { source: 'p3', target: 'p9', label: 'vcf' } },
+{ data: { source: 'p1', target: 'p9', label: 'pop_2' } },
+{ data: { source: 'p9', target: 'p11'} },
+{ data: { source: 'p3', target: 'p10', label: 'vcf' } },
+{ data: { source: 'p2', target: 'p10', label: 'pop_out' } },
 { data: { source: 'p10', target: 'p11'} },
+{ data: { source: 'p11', target: 'p12'} },
+{ data: { source: 'p12', target: 'p13', label: 'p7' } },
+{ data: { source: 'p13', target: 'p14'} },
 ],
 },
 
